tests/reference/run-array_bounds_check_08-7f7acdd.stderr
runtime error: Array shape mismatch in subroutine 'ff'. Tried to match size 5 of dimension 1 of argument number 1, but expected size is 100000
 --> tests/errors/array_bounds_check_08.f90:4:3
  |
4 |   arr = ff()
  |   ^^^
  |
8 |     function ff() result(res)
  |              ~~ Here
  |
9 |         integer :: res(100000)
  |                        ~~~~~~ Parameter is size 100000, argument is size 5
